feat : update application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
 kur.hesapla.api.key=${KUR_HESAPLA_API_KEY}
 quarkus.rest-client."com.fatiharge.client.rest.CurrencyApiClient".url=${CURRENCY_API_CLIENT}
 currency.api.apikey=${CURRENCY_API_APIKEY}
+postgres.db=${POSTGRES_DB}
+postgres.user=${POSTGRES_USER}
+postgres.password=${POSTGRES_PASSWORD}
+
+
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=${POSTGRES_USER}
+quarkus.datasource.password=${POSTGRES_PASSWORD}
+quarkus.datasource.jdbc.url=jdbc:postgresql://kur-hesapla-db.fatiharge.com:5432/${POSTGRES_DB}
+quarkus.hibernate-orm.database.generation=update
