--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ quarkus.datasource.username=${POSTGRES_USER}
 quarkus.datasource.password=${POSTGRES_PASSWORD}
 quarkus.datasource.jdbc.url=jdbc:postgresql://kur-hesapla-db.fatiharge.com:5432/${POSTGRES_DB}
 quarkus.hibernate-orm.database.generation=update
+
+
+quarkus.swagger-ui.always-include=true
