feat : re add createdDate and update version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 kur.hesapla.api.key=${KUR_HESAPLA_API_KEY}
+kur.hesapla.user.agent=kur-hesapla/1.1
 quarkus.rest-client."com.fatiharge.client.rest.CurrencyApiClient".url=${CURRENCY_API_CLIENT}
 currency.api.apikey=${CURRENCY_API_APIKEY}
 postgres.db=${POSTGRES_DB}
@@ -14,3 +15,9 @@ quarkus.hibernate-orm.database.generation=update
 
 
 quarkus.swagger-ui.always-include=true
+quarkus.smallrye-openapi.info-title=kur-hesapla-api
+quarkus.smallrye-openapi.info-version=1.0.1
+quarkus.smallrye-openapi.info-description=Kur hesapla uygulamasi icin backend.
+quarkus.smallrye-openapi.info-contact-name=Fatih
+quarkus.smallrye-openapi.info-contact-url=https://fatiharge.com/contact.html
+quarkus.smallrye-openapi.info-contact-email=fatih@fatiharge.com
